; ModuleID = '/home/carl/AnghaBench/nanomsg/src/aio/extr_timer.c_nn_timer_start.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/aio/extr_timer.c_nn_timer_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_timer = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_timer_start(%struct.nn_timer* %0, i32 %1) #0 {
  %3 = alloca %struct.nn_timer*, align 8
  %4 = alloca i32, align 4
  store %struct.nn_timer* %0, %struct.nn_timer** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp sge i32 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @nn_assert(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.nn_timer*, %struct.nn_timer** %3, align 8
  %11 = getelementptr inbounds %struct.nn_timer, %struct.nn_timer* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load %struct.nn_timer*, %struct.nn_timer** %3, align 8
  %13 = getelementptr inbounds %struct.nn_timer, %struct.nn_timer* %12, i32 0, i32 1
  %14 = call i32 @nn_fsm_start(i32* %13)
  ret void
}

declare dso_local i32 @nn_assert(i32) #1

declare dso_local i32 @nn_fsm_start(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
